# diplomka

./: .gitignore  Cargo.toml  DOKUMENTACIA.md  _headers  build-and-run.ps1  build-and-run.sh  index.html  index.html.bak  pytest.ini  requirements-test.txt  run-comprehensive-tests.sh  run-tests.ps1  run-tests.sh  serve.ps1  serve.sh  test_logp.rs
.github/workflows/: gh-pages.yml  publish.yml
css/: components.css  editor-heatmap.css  feature-selection.css  layout.css
deploy/: index.html
js/: app.js  data.js  editor.js  heatmap.js  main.js  selectors.js  state.js  target-analysis.js  utils.js
pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/: csv_loader.rs  lib.rs  mi_estimator.rs  model.rs  test_logp.rs
src/data_loading/: csv_data_loader.rs  csv_loader.rs  data_loader.rs  factory.rs  json_data_loader.rs  loaded_data.rs  mod.rs
src/embedded/: embedded_selector.rs  embedded_selector_factory.rs  factory.rs  mod.rs  random_forest_selector.rs  ridge_selector.rs
src/entropy/: mod.rs
src/evaluation/: evaluator.rs  metrics.rs  mod.rs
src/feature_selection_strategies/: chi_square_selector.rs  combined_analysis_selector.rs  correlation_selector.rs  factory.rs  feature_selector.rs  feature_selector_factory.rs  information_gain_selector.rs  mod.rs  mutual_information_selector.rs  smc_selector.rs  synergy_sa_selector.rs  synergy_vns_selector.rs  variance_selector.rs
src/models/: IModel.rs  factory.rs  gradient_boosting.rs  (+10 more)
test_data/: cancer_upravene.csv  upravene_data(1).csv  upravene_data(3).csv  upravene_data(4).csv
tests/: conftest.py  preset_tests.html  test_01_init.py  test_02_data_loading.py  test_03_pipeline.py  test_04_target_analysis.py  test_05_selectors.py  test_06_heatmap.py  test_07_editor.py  test_08_all_models_comprehensive.py
(+55 files in other folders)
