[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
csv = "1.2"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
console_error_panic_hook = "0.1"
smartcore = "0.4"
statrs = "0.16.0"
kdtree = "0.7"
once_cell = "1.19"
wide = "0.7"

# Enable WebAssembly support for getrandom (used by rand and other crates)
getrandom = { version = "0.2", features = ["js"] }
gbdt = "0.1.3"
linreg-core = { version = "0.8", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
